# WebSets

./: .gitignore  LICENSE  README.md  index.html  package.json
common_cpp/by_key/: CMakeLists.txt  main.cpp
common_cpp/by_key/webgpu/: webgpu.cmake
common_cpp/not_by_key/: CMakeLists.txt  main.cpp
common_cpp/not_by_key/shaders/: balanced_path_biased.wgsl  set_availability_decoupled_lookback.wgsl
src/: TimestampQueryManager.ts  app.ts  utils.ts
src/balanced_path/common/: balanced_path_biased.wgsl  set_availability_count.wgsl
src/balanced_path/common/by_key/: set_availability_decoupled_lookback_by_key.wgsl  set_availability_write_by_key.wgsl  test_unified_4phase_vs_2phase_by_key.ts
src/balanced_path/common/not_by_key/: set_availability_write.wgsl  test_unified_4phase_vs_2phase.ts
src/balanced_path/common/prefix_sum/: add_block_sums.wgsl  block_prefix_sum.wgsl  exclusive_scan.d.ts  exclusive_scan.js  prefix_sum.wgsl
src/balanced_path/common/radix_sort/: radix_sort.wgsl  sort.ts
